src/test/ui/generic-associated-types/unsatified-item-lifetime-bound.stderr
warning: unnecessary lifetime parameter `'a`
  --> $DIR/unsatified-item-lifetime-bound.rs:4:12
   |
LL |     type Y<'a: 'static>;
   |            ^^
   |
   = help: you can use the `'static` lifetime directly, in place of `'a`

error[E0478]: lifetime bound not satisfied
  --> $DIR/unsatified-item-lifetime-bound.rs:17:8
   |
LL |     f: <T as X>::Y<'a>,
   |        ^^^^^^^^^^^^^^^
   |
note: lifetime parameter instantiated with the lifetime `'a` as defined here
  --> $DIR/unsatified-item-lifetime-bound.rs:16:10
   |
LL | struct C<'a, T: X> {
   |          ^^
   = note: but lifetime parameter must outlive the static lifetime

error[E0478]: lifetime bound not satisfied
  --> $DIR/unsatified-item-lifetime-bound.rs:22:8
   |
LL |     f: <() as X>::Y<'a>,
   |        ^^^^^^^^^^^^^^^^
   |
note: lifetime parameter instantiated with the lifetime `'a` as defined here
  --> $DIR/unsatified-item-lifetime-bound.rs:21:10
   |
LL | struct D<'a> {
   |          ^^
   = note: but lifetime parameter must outlive the static lifetime

error: aborting due to 2 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0478`.
